
//道具信息序列化到db使用！
message db_user_bag_item{
    /** 位置 */
    optional uint32 pos = 1 [default = 0];
    /** 元素类型 */
    optional uint32 element_type = 2 [default = 0];
    /** 元素子类型 */
    optional uint32 element_sub_type = 3 [default = 0];
    /** 元素id */
    optional uint32 element_id = 4 [default = 0];
    /** 数量 */
    optional uint32 num = 5 [default = 0];
}

message db_user_bag {
    repeated db_user_bag_item elements = 1;
}